# mwe_networked_fps_game

./: .gitmodules  README.md
analysis/: reconciliation_comparison.py  results.txt
client/: .required_shader_batchers.txt  CMakeLists.txt  conanfile.txt
client/assets/config/: user_cfg.ini
client/logs/: extract_non_zero_deltas.py  plot_times.py
client/logs/client_server_analysis/: compare_updates.py  get_logs.sh
client/src/: main.cpp
client/src/meta_program/: meta_program.cpp  meta_program.hpp
client/src/networking/packet_types/: packet_types.hpp
client/src/system_logic/character_physics_update_data_time_bundler/: character_physics_update_data_time_bundler.hpp
client/src/system_logic/data_to_reconstruct_client_game_state_when_firing_on_server/: data_to_reconstruct_client_game_state_when_firing_on_server.hpp
client/src/system_logic/interpolate/: interpolate.cpp  interpolate.hpp
client/src/system_logic/reconciliation_types/: reconciliation_types.hpp
client/src/system_logic/update_physics_character/: update_physics_character.hpp
server/: CMakeLists.txt  README.md  conanfile.txt
server/src/: main.cpp
server/src/meta_program/: meta_program.hpp
server/src/networking/packets/: packets.hpp
server/src/sound/sound_types/: sound_types.hpp
server/src/system_logic/create_world/: create_world.hpp
server/src/system_logic/interpolate/: interpolate.cpp
server/src/system_logic/update_physics_character/: sbpt_generated_includes.hpp  update_physics_character.cpp
shared/: links.txt
shared/create_world/: create_world.cpp
(+1 files in other folders)
